--- a/changelog.txt
+++ b/changelog.txt
@@ -1,1 +1,1 @@
-// Hello! This is merely a test. If you're seeing this, I question why and how. 
+// Hello! This is merely a test. If you're seeing this, please don't mind. 
